2007-05-20  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, asap_internal.h, apokeysnd.c, asapscan.c, gsplayer/gspasap.c,
  java/ASAP.ppjava, win32/Makefile, win32/settings.c, win32/settings.h,
  win32/settings.rc, win32/foobar2000/foo_asap.cpp, win32/winamp/in_asap.c:
  silence detection; store settings in winamp.ini (Winamp plugin) or registry
  (GSPlayer plugin)

* java/ASAPApplet.java: togglePause()

* win32/Makefile, win32/settings.rc, win32/settings.h, win32/winamp/in_asap.c,
  win32/winamp/ipc_pe.h, win32/winamp/wa_ipc.h: subsongs as separate playlist
  entries


2007-05-17  Piotr Fusik  <fox@scene.pl>
* java/ASAP2WAV.java: implemented all options present in the C version

* asap2wav.c: slight refactoring


2007-05-16  Piotr Fusik  <fox@scene.pl>
* java/ASAPApplet.java: fixed paint() and called repaint()

* asap_internal.h, asap.c, java/ASAP.ppjava, java/Makefile,
  java/MIDLET_MANIFEST.MF: native Atari formats now supported by the Java
  version

* acpu.h, asap.c, asap_internal.h: fixed cycle calculations


2007-05-15  Piotr Fusik  <fox@scene.pl>
* java/ASAPApplet.java, java/Makefile: support "song", "defaultPlaybackTime",
  "loopPlaybackTime" and "onPlaybackEnd" parameters and play() and stop()
  methods


2007-05-13  Piotr Fusik  <fox@scene.pl>
* acpu.c, apokeysnd.c, asap.c, asap.h, asap_internal.h, java/ASAP.ppjava
  - ASAP_State.cycle is now real cycle rather than 6502 cycle

* asap.c: 6502 flag I is initially cleared - Digital_Trash.sap works

* java/ASAPApplet.java: read() may return before end of file, so call it
  repeatedly


2007-05-12  Piotr Fusik  <fox@scene.pl>
* asap.c: fixed ASAP_Seek() that incorrectly used sample_offset instead
  of sample_index

* asap.h: corrections in comments

* java/Makefile, win32/Makefile: created separate Makefile for Java

* java/ASAP.ppjava, java/ASAP_ModuleInfo.java: javadoc comments

* java/ASAPMIDlet.java, java/MIDLET_MANIFEST.MF, java/mf2jad.pl, java/Makefile: