@@ -3,8 +3,6 @@ Things to be done in future versions
 
 * debug the new POKEY emulator
 
-* mute user-selected POKEY channels
-
 * finish the Java midlet
 
 * detect song length in native formats
