@@ -77,6 +77,10 @@ Output 16-bit samples (default).
 \fB\-\-raw\fR
 Output audio samples without the WAV header.
 .TP
+\fB\-m\fR \fICHANNELS\fR, \fB\-\-mute\fR=\fICHANNELS\fR
+Mute POKEY channels specified by digits: 1-4 for the base (mono or left) POKEY,
+5-8 for the extra (right) POKEY.
+.TP
 \fB\-h\fR, \fB\-\-help\fR
 Display help message and exit.
 .TP
