@@ -16,7 +16,7 @@
 #define INTERNAL_NAME "gspasap"
 #endif
 
-IDD_SETTINGS DIALOG 0, 0, 184, 148
+IDD_SETTINGS DIALOG 0, 0, 184, 216
 #ifdef FOOBAR2000
 STYLE WS_CHILD
 #else
@@ -40,11 +40,21 @@ FONT 8, "MS Sans Serif"
 	LTEXT "seconds of silence", IDC_STATIC, 88, 50, 64, 12
 	AUTORADIOBUTTON "Same as songs with unspecified duration", IDC_LOOPS, 16, 84, 152, 12, BS_AUTORADIOBUTTON | WS_TABSTOP | WS_GROUP
 	AUTORADIOBUTTON "Finish when music starts repeating", IDC_NOLOOPS, 16, 98, 152, 12
+	AUTOCHECKBOX "Channel 1", IDC_MUTE1, 24, 132, 48, 12
+	AUTOCHECKBOX "Channel 2", IDC_MUTE1 + 1, 24, 144, 48, 12
+	AUTOCHECKBOX "Channel 3", IDC_MUTE1 + 2, 24, 156, 48, 12
+	AUTOCHECKBOX "Channel 4", IDC_MUTE1 + 3, 24, 168, 48, 12
+	AUTOCHECKBOX "Channel 1", IDC_MUTE1 + 4, 112, 132, 48, 12
+	AUTOCHECKBOX "Channel 2", IDC_MUTE1 + 5, 112, 144, 48, 12
+	AUTOCHECKBOX "Channel 3", IDC_MUTE1 + 6, 112, 156, 48, 12
+	AUTOCHECKBOX "Channel 4", IDC_MUTE1 + 7, 112, 168, 48, 12
 	GROUPBOX "Songs with unspecified duration", IDC_STATIC, 8, 4, 168, 64
 	GROUPBOX "Songs marked as looping", IDC_STATIC, 8, 72, 168, 46
+	GROUPBOX "Mute base POKEY", IDC_STATIC, 8, 122, 80, 64
+	GROUPBOX "Mute extra POKEY", IDC_STATIC, 96, 122, 80, 64
 #ifndef FOOBAR2000
-	DEFPUSHBUTTON "OK", IDOK, 38, 126, 50, 14
-	PUSHBUTTON "Cancel", IDCANCEL, 96, 126, 50, 14
+	DEFPUSHBUTTON "OK", IDOK, 38, 194, 50, 14
+	PUSHBUTTON "Cancel", IDCANCEL, 96, 194, 50, 14
 #endif
 }
 
